--- a/Code/App.xaml
+++ b/Code/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Wpf_project.App"
+﻿<Application x:Class="WPF_Project.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Wpf_project"
+             xmlns:local="clr-namespace:WPF_Project"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
