--- a/Code/MainWindow.xaml
+++ b/Code/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Wpf_project.MainWindow"
+﻿<Window x:Class="WPF_Project.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Wpf_project"
+        xmlns:local="clr-namespace:WPF_Project"
         mc:Ignorable="d"
         Title="Ello" Height="450" Width="800">
 
@@ -21,10 +21,11 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Button Content="Add New Task" Margin="5" MinWidth="20" HorizontalAlignment="Left"></Button>
-            <Label Grid.Column="0" Grid.Row="1" Content="To do" Margin="5" />
+        <Button Content="Add New Task" Margin="5" MinWidth="20" HorizontalAlignment="Left" />
+        <Label Grid.Column="0" Grid.Row="1" Content="To do" Margin="5" />
         <Label Grid.Column="1" Grid.Row="1" Content="In progress" Margin="5" />
         <Label Grid.Column="2" Grid.Row="1" Content="Done" Margin="5" />
+
         <Grid Grid.Row="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -37,9 +38,9 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
+
             <Frame Grid.RowSpan="3" Grid.ColumnSpan="3" Foreground="Black" BorderBrush="Aqua" Visibility="Visible"/>
-            
+
             <Rectangle Grid.Row="0" Grid.Column="0" Fill="#FF0000" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinWidth="15" MinHeight="10" Stroke="Black" Margin="5"/>
 
             <TextBox Grid.Row="2" Grid.Column="0" Text="Tag1" TextWrapping="Wrap" Margin="5" />
@@ -47,17 +48,12 @@
             <Button Grid.Row="2" Grid.Column="2" Content="..." Margin="5" MinWidth="20" MaxWidth="25" HorizontalAlignment="Right" />
             <ComboBox Grid.Row="1" Grid.Column="0" Width="40" Height="20"  SelectionChanged="ListBox_SelectionChanged">
                 <ComboBoxItem>
-                    <CheckBox>subtask1</CheckBox></ComboBoxItem>
+                    <CheckBox>subtask1</CheckBox>
+                </ComboBoxItem>
                 <ComboBoxItem>
                     <CheckBox>subtask2</CheckBox>
                 </ComboBoxItem>
             </ComboBox>
-
-
         </Grid>
-
-
-
-
     </Grid>
 </Window>
