Co-authored-by: Daniel Pietrzeniuk <ProgramistycznySwir@users.noreply.github.com>

--- a/Code/MainWindow.xaml
+++ b/Code/MainWindow.xaml
@@ -20,8 +20,11 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        
 
         <Button Content="Add New Task" Margin="5" MinWidth="20" HorizontalAlignment="Left" />
+        <Button Content= "Manage tags" Margin="5" MinWidth="20" HorizontalAlignment="Right" />
+        
         <Label Grid.Column="0" Grid.Row="1" Content="To do" Margin="5" />
         <Label Grid.Column="1" Grid.Row="1" Content="In progress" Margin="5" />
         <Label Grid.Column="2" Grid.Row="1" Content="Done" Margin="5" />
