--- a/Code/MainWindow.xaml
+++ b/Code/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:WPF_Project"
         mc:Ignorable="d"
         Title="Ello" Height="450" Width="800">
+    <Window.Resources>
+        <local:BoardTaskConverter x:Key="R_BoardTaskConverter"/>
+    </Window.Resources>
 
     <Grid>
 
@@ -22,7 +25,7 @@
         </Grid.ColumnDefinitions>
         
 
-        <Button Content="Add New Task" Margin="5" MinWidth="20" HorizontalAlignment="Left" />
+        <Button Content="Add New Task" Margin="5" MinWidth="20" HorizontalAlignment="Left" Click="Button_Click" />
         <Button Content= "Manage tags" Margin="5" MinWidth="20" HorizontalAlignment="Right" />
         
         <Label Grid.Column="0" Grid.Row="1" Content="To do" Margin="5" />
