--- a/Code/Views/Task.xaml
+++ b/Code/Views/Task.xaml
@@ -26,18 +26,19 @@
         
         <GroupBox Grid.RowSpan="3" Grid.ColumnSpan="3" BorderBrush="#25A0DA" Background="#F5F5D1"></GroupBox>
 
-        <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Path=Title, Mode=TwoWay}" TextWrapping="Wrap" Margin="5" />
-        
-        <Rectangle Grid.Row="0" Grid.Column="2" Fill="{Binding Path=Priority, Mode=OneWay, Converter={StaticResource R_PriorityToBrushConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinWidth="15" MinHeight="10" Stroke="Black" Margin="5"/>
+        <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Path=Title, Mode=TwoWay}" TextWrapping="Wrap" Margin="5" TextChanged="tb_Title_OnTextChanged"/>
 
-        <ComboBox IsEditable="True" Text="Tags" Grid.Row="2" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="ListBox_SelectionChanged">
-            <ComboBoxItem>
-                <CheckBox>tag1</CheckBox>
-            </ComboBoxItem>
-            <ComboBoxItem>
-                <CheckBox>tag2</CheckBox>
-            </ComboBoxItem>
-        </ComboBox>
+        <Button Grid.Row="0" Grid.Column="2" Margin="5" Click="btn_Priority_Click">
+            <Rectangle Fill="{Binding Path=Priority, Mode=OneWay, Converter={StaticResource R_PriorityToBrushConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinWidth="15" MinHeight="10" Stroke="Black"/>
+        </Button>
+
+        <!--<ComboBox ItemsSource="{Binding Tags, Mode=TwoWay}" IsEditable="True" Text="Tags" Grid.Row="2" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="ListBox_SelectionChanged">
+            <ComboBox.ItemTemplate>
+                <Grid>
+                    <CheckBox>tag1</CheckBox>
+                </Grid>
+            </ComboBox.ItemTemplate>
+        </ComboBox>-->
         <DatePicker Name ="datePicker1"  Grid.Row="2" Grid.Column="1" Margin="5" />
         <Button Grid.Row="2" Grid.Column="2" Content="&lt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Left" />
         <Button Grid.Row="2" Grid.Column="2" Content="&gt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Right" />
