--- a/Code/Views/Task.xaml
+++ b/Code/Views/Task.xaml
@@ -23,26 +23,17 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        
-        <GroupBox Grid.RowSpan="3" Grid.ColumnSpan="3" BorderBrush="#25A0DA" Background="#F5F5D1"></GroupBox>
 
-        <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Path=Title, Mode=TwoWay}" TextWrapping="Wrap" Margin="5" TextChanged="tb_Title_OnTextChanged"/>
+        <GroupBox Grid.RowSpan="3" Grid.ColumnSpan="3" BorderBrush="#25A0DA" Background="#F5F5D1" />
+
+        
+        <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Path=Title, Mode=TwoWay}" TextWrapping="Wrap" Margin="5" IsKeyboardFocusedChanged="tb_Title_OnIsKeyboardFocusedChanged"/>
 
         <Button Grid.Row="0" Grid.Column="2" Margin="5" Click="btn_Priority_Click">
             <Rectangle Fill="{Binding Path=Priority, Mode=OneWay, Converter={StaticResource R_PriorityToBrushConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinWidth="15" MinHeight="10" Stroke="Black"/>
         </Button>
 
-        <!--<ComboBox ItemsSource="{Binding Tags, Mode=TwoWay}" IsEditable="True" Text="Tags" Grid.Row="2" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="ListBox_SelectionChanged">
-            <ComboBox.ItemTemplate>
-                <Grid>
-                    <CheckBox>tag1</CheckBox>
-                </Grid>
-            </ComboBox.ItemTemplate>
-        </ComboBox>-->
-        <DatePicker Name ="datePicker1"  Grid.Row="2" Grid.Column="1" Margin="5" />
-        <Button Grid.Row="2" Grid.Column="2" Content="&lt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Left" />
-        <Button Grid.Row="2" Grid.Column="2" Content="&gt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Right" />
-        <ComboBox IsEditable="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="ListBox_SelectionChanged">
+        <ComboBox IsEditable="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="ComboBox_SelectionChanged">
             <ComboBoxItem>
                 <CheckBox>subtask1</CheckBox>
             </ComboBoxItem>
@@ -50,6 +41,20 @@
                 <CheckBox>subtask2</CheckBox>
             </ComboBoxItem>
         </ComboBox>
+        
+        <!--<ComboBox ItemsSource="{Binding Path=Tags, Mode=TwoWay}" IsEditable="True" Text="Tags" Grid.Row="2" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="lb_Tags_OnSelectionChanged">-->
+        <ComboBox Name="TagsComboBox" Text="Tags" IsEditable="True" IsReadOnly="True" Grid.Row="2" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="lb_Tags_OnSelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <ComboBoxItem>
+                        <CheckBox Content="{Binding Name}" IsChecked="{}"/>
+                    </ComboBoxItem>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <DatePicker Name ="datePicker1"  Grid.Row="2" Grid.Column="1" Margin="5" />
+        <Button Grid.Row="2" Grid.Column="2" Content="&lt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Left" />
+        <Button Grid.Row="2" Grid.Column="2" Content="&gt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Right" />
 
     </Grid>
 </UserControl>
