--- a/Code/Views/Task.xaml
+++ b/Code/Views/Task.xaml
@@ -33,12 +33,14 @@
             <Rectangle Fill="{Binding Path=Priority, Mode=OneWay, Converter={StaticResource R_PriorityToBrushConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinWidth="15" MinHeight="10" Stroke="Black"/>
         </Button>
 
-        <ComboBox IsEditable="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="ComboBox_SelectionChanged">
+        <ComboBox Name="TasksComboBox" IsEditable="True" Text="Subtasks" IsReadOnly="True" Grid.Row="1" Grid.Column="0" Width="auto" Height="20" DropDownClosed="cb_Tags_DropDownClosed">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <CheckBox Content="{Binding Name}" IsChecked="{Binding Path=IsFinished, Mode=OneWayToSource}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
             <ComboBoxItem>
-                <CheckBox>subtask1</CheckBox>
-            </ComboBoxItem>
-            <ComboBoxItem>
-                <CheckBox>subtask2</CheckBox>
+                <TextBox Name="AddNewSubtaskTextBox" Width="120" HorizontalAlignment="Stretch" KeyDown="tb_AddNewSubtask_OnEnter"/>
             </ComboBoxItem>
         </ComboBox>
         
