--- a/Code/Views/Task.xaml
+++ b/Code/Views/Task.xaml
@@ -26,14 +26,14 @@
 
         <GroupBox Grid.RowSpan="3" Grid.ColumnSpan="3" BorderBrush="#25A0DA" Background="#F5F5D1" />
 
-        
+
         <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Path=Title, Mode=TwoWay}" TextWrapping="Wrap" Margin="5" IsKeyboardFocusedChanged="tb_Title_OnIsKeyboardFocusedChanged"/>
 
         <Button Grid.Row="0" Grid.Column="2" Margin="5" Click="btn_Priority_Click">
-            <Rectangle Fill="{Binding Path=Priority, Mode=OneWay, Converter={StaticResource R_PriorityToBrushConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinWidth="15" MinHeight="10" Stroke="Black"/>
+            <Rectangle Fill="{Binding Path=Priority, Mode=OneWay, Converter={StaticResource R_PriorityToBrushConverter}}" Height="auto" Width="auto" MinWidth="80" MinHeight="20" Stroke="Black" />
         </Button>
 
-        <ComboBox IsEditable="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="ComboBox_SelectionChanged">
+        <ComboBox IsEditable="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="117" Height="20"  SelectionChanged="ComboBox_SelectionChanged" Grid.ColumnSpan="2" HorizontalAlignment="Left">
             <ComboBoxItem>
                 <CheckBox>subtask1</CheckBox>
             </ComboBoxItem>
@@ -41,7 +41,7 @@
                 <CheckBox>subtask2</CheckBox>
             </ComboBoxItem>
         </ComboBox>
-        
+
         <!--<ComboBox ItemsSource="{Binding Path=Tags, Mode=TwoWay}" IsEditable="True" Text="Tags" Grid.Row="2" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="lb_Tags_OnSelectionChanged">-->
         <ComboBox Name="TagsComboBox" Text="Tags" IsEditable="True" IsReadOnly="True" Grid.Row="2" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="lb_Tags_OnSelectionChanged">
             <ComboBox.ItemTemplate>
