--- a/Code/Views/Task.xaml
+++ b/Code/Views/Task.xaml
@@ -16,6 +16,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -55,6 +56,10 @@
         <DatePicker Name ="datePicker1"  Grid.Row="2" Grid.Column="1" Margin="5" />
         <Button Grid.Row="2" Grid.Column="2" Content="&lt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Left" />
         <Button Grid.Row="2" Grid.Column="2" Content="&gt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Right" />
-
+        <Grid Grid.Row="3" Grid.ColumnSpan="3">
+            <ProgressBar MinHeight="10" Minimum="0" Maximum="100" Value="75"></ProgressBar>
+            <TextBlock Text="Task progress" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        </Grid>
     </Grid>
+
 </UserControl>
