--- a/Code/Views/Task.xaml
+++ b/Code/Views/Task.xaml
@@ -33,17 +33,23 @@
             <Rectangle Fill="{Binding Path=Priority, Mode=OneWay, Converter={StaticResource R_PriorityToBrushConverter}}" Height="auto" Width="auto" MinWidth="80" MinHeight="20" Stroke="Black" />
         </Button>
 
-        <ComboBox IsEditable="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="117" Height="20"  SelectionChanged="ComboBox_SelectionChanged" Grid.ColumnSpan="2" HorizontalAlignment="Left">
-        <ComboBox Name="TasksComboBox" IsEditable="True" Text="Subtasks" IsReadOnly="True" Grid.Row="1" Grid.Column="0" Width="auto" Height="20" DropDownClosed="cb_Tags_DropDownClosed">
+        <ComboBox Name="TasksComboBox" IsEditable="True" IsReadOnly="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="auto" Height="20"  DropDownClosed="cb_Tags_DropDownClosed" HorizontalAlignment="Left">
+        <!--<ComboBox Name="TasksComboBox" IsEditable="True" Text="Subtasks" IsReadOnly="True" Grid.Row="1" Grid.Column="0" Width="auto" Height="20" DropDownClosed="cb_Tags_DropDownClosed">-->
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <CheckBox Content="{Binding Name}" IsChecked="{Binding Path=IsFinished, Mode=OneWayToSource}"/>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
-            <ComboBoxItem>
-                <TextBox Name="AddNewSubtaskTextBox" Width="120" HorizontalAlignment="Stretch" KeyDown="tb_AddNewSubtask_OnEnter"/>
-            </ComboBoxItem>
+            <!--<ComboBoxItem>
+                <TextBox Name="AddNewSubtaskTextBox" IsEnabled="True" Width="120" HorizontalAlignment="Stretch" KeyDown="tb_AddNewSubtask_OnEnter"/>
+            </ComboBoxItem>-->
         </ComboBox>
+        <DockPanel Grid.Row="1" Grid.Column="1">
+            <Button Name="AddNewSubTask_Button" Content="+" DockPanel.Dock="Right"  Background="Azure" Click="btn_AddSubTask_Click" />
+            <TextBox Name="AddNewSubTask_Text"/>
+        </DockPanel>
+
+
 
         <!--<ComboBox ItemsSource="{Binding Path=Tags, Mode=TwoWay}" IsEditable="True" Text="Tags" Grid.Row="2" Grid.Column="0" Width="auto" Height="20"  SelectionChanged="lb_Tags_OnSelectionChanged">-->
         <ComboBox Name="TagsComboBox" Text="Tags" IsEditable="True" IsReadOnly="True" Grid.Row="2" Grid.Column="0" Width="auto" Height="20" DropDownClosed="cb_Tags_DropDownClosed">
