--- a/Code/Views/Task.xaml
+++ b/Code/Views/Task.xaml
@@ -48,7 +48,7 @@
                 <TextBox Name="AddNewSubtaskTextBox" IsEnabled="True" Width="120" HorizontalAlignment="Stretch" KeyDown="tb_AddNewSubtask_OnEnter"/>
             </ComboBoxItem>-->
         </ComboBox>
-        <DockPanel Grid.Row="1" Grid.Column="1">
+        <DockPanel Grid.Row="1" Grid.Column="1" Margin="5">
             <Button Name="AddNewSubTask_Button" Content="+" DockPanel.Dock="Right"  Background="Azure" Click="btn_AddSubTask_Click" />
             <TextBox Name="AddNewSubTask_Text"/>
         </DockPanel>
@@ -73,9 +73,7 @@
             <TextBlock Text="Task progress" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Grid>
 
-        <Button Name="DeleteTask_Button" Grid.Row="2" Grid.Column="2" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Right" Click="btn_DeleteTask_Click" >
-            <Image Source="Images\usunto.png" Width="10" Height="10"/>
-        </Button>
+        <Button Name="DeleteTask_Button" Content="X" Foreground="Red" Grid.Row="2" Grid.Column="2" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Right" Click="btn_DeleteTask_Click" />
     </Grid>
 
 </UserControl>
