--- a/Code/Views/Task.xaml
+++ b/Code/Views/Task.xaml
@@ -34,7 +34,7 @@
             <Rectangle Fill="{Binding Path=Priority, Mode=OneWay, Converter={StaticResource R_PriorityToBrushConverter}}" Height="auto" Width="auto" MinWidth="80" MinHeight="20" Stroke="Black" />
         </Button>
 
-        <ComboBox Name="TasksComboBox" IsEditable="True" IsReadOnly="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="auto" Height="20"  DropDownClosed="cb_Tags_DropDownClosed" HorizontalAlignment="Left" SelectionChanged="TasksComboBox_SelectionChanged">
+        <ComboBox Name="TasksComboBox" IsEditable="True" IsReadOnly="True" Text="Subtasks" Grid.Row="1" Grid.Column="0" Width="auto" Height="20" HorizontalAlignment="Left" DropDownClosed="cb_Tasks_DropDownClosed">
         <!--<ComboBox Name="TasksComboBox" IsEditable="True" Text="Subtasks" IsReadOnly="True" Grid.Row="1" Grid.Column="0" Width="auto" Height="20" DropDownClosed="cb_Tags_DropDownClosed">-->
             <ComboBox.ItemTemplate>
                 <DataTemplate>
@@ -69,7 +69,7 @@
         <Button Name="MoveTaskButton_Left"  Grid.Row="1" Grid.Column="2" Content="&lt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Left"  IsEnabled="{Binding IsNotColumnLeftmost}"  Click="btn_MoveTask_Click" />
         <Button Name="MoveTaskButton_Right" Grid.Row="1" Grid.Column="2" Content="&gt;" Margin="5" MinWidth="20" MaxWidth="30" HorizontalAlignment="Right" IsEnabled="{Binding IsNotColumnRightmost}" Click="btn_MoveTask_Click" />
         <Grid Grid.Row="3" Grid.ColumnSpan="3">
-            <ProgressBar MinHeight="10" Minimum="0" Maximum="100" Value="75"></ProgressBar>
+            <ProgressBar MinHeight="10" Minimum="0" Maximum="1" Value="{Binding CompletionRate}" />
             <TextBlock Text="Task progress" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Grid>
 
